examples/bad/duplicate-argument-names.elina
fn f(argument: int, argument: bool): void {
}

fn main(): void {
}